--- a/templates/index.html
+++ b/templates/index.html
@@ -20,10 +20,10 @@
     </header>
 
     <section id="home">
-        <h2>Students Table</h2>
+        <h1 style="font-size: 42px; font-weight: 900;">Students Table</h1>
         <div class="search-bar">
             <form method="POST" action="{{ url_for('search') }}">
-                <input type="text" name="search" placeholder="Search by name or email" required>
+                <input type="text" name="search" placeholder="Search by name or year" required>
                 <button type="submit">Search</button>
             </form>
         </div>
